--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -40,11 +40,11 @@
     padding: 4.5rem;
     background-color: var(--color-grey-light-1);
     border-bottom: var(--line);
+    font-size: 1.5rem;
 }
 
 .description{
     background-color: #fff;
-    font-size: 1.5rem;
     box-shadow: var(--shadow-light);
     padding: 3rem;
     flex: 0 0 60%;
@@ -53,6 +53,9 @@
 }
 
 .user-reviews{
-    background-color: yellowgreen;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
